<resources>
    <string name="app_name">智慧校园</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="str_login_or_register">登录/注册</string>
    <string name="str_report_record">举报记录</string>
    <string name="str_prize_record">获奖记录</string>
    <string name="str_my_collect">我的收藏</string>
    <string name="str_settings">设置</string>
    <string name="str_user_auth_error">您的账号已在其他设备登录，用户权限失效。请重新登录？</string>
    <string name="str_cancel">取消</string>
    <string name="str_login">登录</string>
    <string name="str_loading">加载中</string>
    <string name="str_input_phone">请输入手机号</string>
    <string name="str_input_password">请输入密码</string>
    <string name="str_new_user">新用户</string>
    <string name="str_forgetpwd_extend">忘记密码?</string>
    <string name="str_setting">设置</string>
    <string name="str_app_version">软件版本</string>
    <string name="str_exit_login">退出登录</string>
    <string name="str_app_cache">应用缓存(点击清空)</string>

    <string name="title_activity_index">IndexActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="str_register">注册</string>
    <string name="str_input_verifycode">请输入验证码</string>
    <string name="str_send_verify">发送验证码</string>
    <string name="str_user_protocol">《用户使用协议》</string>
    <string name="str_agree">同意</string>
    <string name="str_reset_pwd">重置密码</string>
    <string name="str_submit">提交</string>
    <string name="str_scan">扫一扫</string>
    <string name="str_foot">足迹</string>
    <string name="str_personal_center">个人中心</string>
    <string name="str_phone_check">手机号验证</string>
    <string name="str_next">下一步</string>
    <string name="str_realname">输入真实姓名</string>
    <string name="str_stunum">输入学号</string>
    <string name="str_choose_school">选择学校</string>
    <string name="str_choose_house">选择宿舍</string>
    <string name="str_choose_sex">选择性别</string>
    <string name="str_choose_date">选择出生年月</string>
    <string name="str_input_house_num">输入宿舍号</string>
    <string name="str_face_detect">人脸采集</string>
    <string name="str_face_tips">(为了日后您能正常使用我们提供的服务，请确保是你本人的脸，并且清晰可见)</string>
    <string name="str_face_detected">开始采集</string>
    <string name="str_submit_face">上传人脸</string>
    <string name="str_mine_foot">我的足迹</string>
    <string name="str_mine_class">我的课程</string>
    <string name="str_share_foot">分享足迹</string>
    <string name="str_input_content">请输入内容</string>
    <string name="str_add">添加</string>
    <string name="str_send_tips">(不得发布政治、色情敏感话题)</string>
    <string name="str_like_tips">人觉得很赞</string>
    <string name="str_say_content">说点什么吧</string>
    <string name="str_send">发表</string>
    <string name="str_common">评论</string>
    <string name="str_maohao">:</string>
    <string name="str_reply">回复</string>
    <string name="str_share">分享</string>
    <string name="str_pass">举报</string>
    <string name="str_delete">删除</string>
    <string name="str_close">关闭</string>
    <string name="str_mine_info">我的资料</string>
    <string name="str_avatar">头像</string>
</resources>
