<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="faceModel"
            type="com.cloudcreativity.intellijSchool.loginAndRegister.FaceModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tlb_face"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            android:background="@color/colorPrimary"
            android:elevation="3dip"
            app:titleTextColor="@color/white"
            app:title="@string/str_face_detect"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="20dip">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_face"
                android:src="@mipmap/face_tected"
                android:layout_width="150dip"
                android:layout_height="150dip" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_marginTop="20dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_face_tips"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Button"
                android:textColor="@color/white"
                android:onClick="@{()->faceModel.onFaceClick()}"
                android:text="@string/str_face_detected"
                android:layout_marginTop="20dip"/>
            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->faceModel.onSubmit()}"
                android:text="@string/str_submit_face"
                android:theme="@style/GreenButton" />
        </LinearLayout>
    </LinearLayout>
</layout>