<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="registerModel"
            type="com.cloudcreativity.intellijSchool.loginAndRegister.RegisterModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tlb_register"
            android:background="@color/colorPrimary"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:title="@string/str_phone_check"
            android:elevation="3dip"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            tools:targetApi="lollipop" />

        <!--content widgets-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_phone"
            android:layout_marginStart="15dip"
            android:layout_marginEnd="15dip"
            android:layout_marginTop="10dip"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_input_phone"
                android:drawableStart="@drawable/ic_phone_android_gray_24dp"
                android:drawablePadding="10dip"
                android:text="@={registerModel.phone}"
                android:maxLength="11"
                android:padding="10dip"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_pwd"
            android:layout_marginStart="15dip"
            android:layout_marginEnd="15dip"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_input_password"
                android:drawableStart="@drawable/ic_https_gray_24dp"
                android:drawablePadding="10dip"
                android:text="@={registerModel.password}"
                android:padding="10dip"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dip"
            android:paddingEnd="15dip"
            android:gravity="bottom"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_verifyCode"
                app:errorEnabled="true"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.5">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_verifyCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_input_verifycode"
                    android:drawablePadding="10dip"
                    android:maxLength="6"
                    android:gravity="center"
                    android:text="@={registerModel.verifyCode}"
                    android:padding="10dip"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@={registerModel.btn_verify_text}"
                android:clickable="@{registerModel.is_enable}"
                android:onClick="@{()->registerModel.onSendVerifyClick()}"
                android:theme="@style/Button"/>
        </android.support.v7.widget.LinearLayoutCompat>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dip"
            android:paddingEnd="15dip"
            android:paddingTop="10dip"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_414141"
                android:textSize="@dimen/sp14"
                android:checked="@={registerModel.is_check_protocol}"
                android:text="@string/str_agree"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dip"
                android:onClick="@{()->registerModel.onLookProtocolClick()}"
                android:textSize="@dimen/sp14"
                android:textColor="@color/colorAccent"
                android:text="@string/str_user_protocol"/>
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dip"
            android:layout_marginEnd="15dip"
            android:layout_marginTop="10dip"
            android:onClick="@{()->registerModel.onRegisterClick()}"
            android:text="@string/str_next"
            android:theme="@style/Button"/>

    </LinearLayout>
</layout>