<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="addFoot"
            type="com.cloudcreativity.intellijSchool.foot.AddFootModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tlb_addFoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/white"
            android:elevation="3dip"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:title="@string/str_share_foot"
            tools:ignore="UnusedAttribute" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:background="@color/white"
                android:orientation="vertical">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_addFoot_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="5"
                    android:gravity="top"
                    android:padding="10dip"
                    android:text="@={addFoot.content}"
                    android:textColor="@color/gray_515151"
                    android:textColorHint="@color/gray_919191"
                    android:background="@color/transparent"
                    android:hint="@string/str_input_content"/>

                <GridView
                    android:layout_marginTop="10dip"
                    android:horizontalSpacing="10dip"
                    android:verticalSpacing="10dip"
                    android:scrollbars="none"
                    android:id="@+id/gv_addFoot"
                    android:adapter="@{addFoot.adapter}"
                    android:numColumns="4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.AppCompatButton
                    android:layout_marginTop="10dip"
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:onClick="@{()->addFoot.onSubmitClick()}"
                    android:theme="@style/Button"
                    android:text="@string/str_send"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:textColor="@color/gray_717171"
                    android:text="@string/str_send_tips"/>
            </LinearLayout>

    </LinearLayout>
</layout>