<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="utils"
            type="com.cloudcreativity.intellijSchool.utils.AuthDialogUtils" />
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="20dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/colorPrimary"/>
        <TextView
            android:padding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:text="@string/str_user_auth_error"
            android:textSize="16sp"
            android:textColor="@color/gray_313131"/>
        <LinearLayout
            android:gravity="end"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:onClick="@{(view)->utils.onCancelClick(view)}"
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/str_cancel"/>
            <TextView
                android:onClick="@{(view)->utils.onLoginClick(view)}"
                android:id="@+id/tv_login"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/str_login"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>
    </LinearLayout>
</layout>
