<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">
    <data>
        <variable
            name="infoModel"
            type="com.cloudcreativity.intellijSchool.loginAndRegister.FillInfoModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tlb_fill"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:title="完善资料"/>
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <android.support.v7.widget.AppCompatImageView
                    android:src="@mipmap/upload_avatar"
                    android:onClick="@{()->infoModel.onChoosePic()}"
                    bind:avatar="@{infoModel.avatar.get()}"
                    android:layout_width="70dip"
                    android:layout_height="70dip" />
                <!--avatar-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="15dip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:hint="@string/str_realname"
                        android:text="@={infoModel.name}"
                        android:gravity="center"
                        android:layout_height="wrap_content" />
                    <android.support.v7.widget.AppCompatEditText
                        android:layout_marginStart="10dip"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:text="@={infoModel.stuNum}"
                        android:hint="@string/str_stunum"
                        android:gravity="center"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <!--school-->
                <android.support.v7.widget.AppCompatTextView
                    android:layout_marginTop="15dip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_choose_school"
                    android:padding="10dip"
                    android:textSize="@dimen/sp16"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_gray_24dp"
                    android:onClick="@{()->infoModel.onChooseSchool()}"
                    android:text="@={infoModel.school}" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="@color/gray_919191"/>
                <!--building-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dip"
                    android:orientation="horizontal">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:onClick="@{()->infoModel.onChooseHouse()}"
                        android:text="@={infoModel.house}"
                        android:hint="@string/str_choose_house"
                        android:padding="10dip"
                        android:textSize="@dimen/sp16"
                        android:drawableEnd="@drawable/ic_keyboard_arrow_right_gray_24dp" />
                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dip"
                        android:hint="@string/str_input_house_num"
                        android:gravity="center"
                        android:padding="10dip"
                        android:background="@color/transparent"
                        android:textSize="@dimen/sp16"
                        android:text="@={infoModel.houseNum}"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="@color/gray_919191"/>
                <!--sex-->
                <!--birth-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dip"
                    android:orientation="horizontal">
                    <android.support.v7.widget.AppCompatTextView
                        android:onClick="@{()->infoModel.onChooseSex()}"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_choose_sex"
                        android:padding="10dip"
                        android:textSize="@dimen/sp16"
                        android:drawableEnd="@drawable/ic_keyboard_arrow_right_gray_24dp"
                        android:text="@={infoModel.sex}"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:onClick="@{()->infoModel.onChooseBirth()}"
                        android:text="@={infoModel.birth}"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_choose_date"
                        android:layout_marginStart="10dip"
                        android:padding="10dip"
                        android:textSize="@dimen/sp16"
                        android:drawableEnd="@drawable/ic_keyboard_arrow_right_gray_24dp"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="@color/gray_919191"/>
                <android.support.v7.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dip"
                    android:theme="@style/Button"
                    android:onClick="@{()->infoModel.submit()}"
                    android:text="@string/str_next"/>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</layout>